--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,21 +2,63 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.flag {
-  height: 8rem;
-  width: 8rem;
-}
-
-.container {
+  background-color: rgb(221, 221, 221);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid gray;
+}
+.flag {
+  height: 8rem;
+  width: 8rem;
+  animation-name: example;
+  animation-duration: 2s;
+  animation-delay: 0.5s;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  border: 1px solid rgb(204, 200, 200);
+  width: 40rem;
+  overflow: hidden;
+}
+.form {
+  width: 40rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+  height: 3rem;
+  input {
+    width: 20rem;
+    margin-right: 30px;
+    border: rgb(206, 198, 198) 1px solid;
+    border-radius: 3px;
+    height: 1.5rem;
+  }
+  button {
+    border: 1 px gray solid;
+    border-radius: 5px;
+    width: 6rem;
+    height: 1.5rem;
+    background-color: rgb(200, 200, 200);
+  }
+}
+
+@keyframes example {
+  from {
+    width: 2rem;
+    height: 2rem;
+  }
+  to {
+    width: 8rem;
+    height: 8rem;
+    transition: 5s;
+  }
 }
